k8s/microsservices/donation-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: donation-ns
spec:
  type: ClusterIP
  selector:
    app: donation-service
  ports:
    - name: http
      port: 80
      targetPort: 8082
